my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_old_method_noparams/ESYNTAX_old_method_noparams.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_old_method_noparams.dml:10:10: error ESYNTAX: syntax error at '{'
